make sure backface of video is visible

--- a/instaminsta/style.scss
+++ b/instaminsta/style.scss
@@ -25,6 +25,7 @@ body{
   overflow: hidden;
   top: 50vh;
   transform: translateY(-50%);
+  backface-visibility: visible;
     
   #video-preview {
     min-height: 100%;
